// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistAddComponent should save 1`] = `
{
  "email": "artist@email.org",
  "genres": null,
  "id": undefined,
  "name": "NAME",
  "stageName": "STAGE_NAME",
}
`;

exports[`ArtistAddComponent should support Picture filters 1`] = `
[
  {
    "blob": "xyz",
    "id": "xyz",
    "type": "xyz",
  },
]
`;

exports[`ArtistEditComponent should update 1`] = `
{
  "email": "artist@email.org",
  "genres": null,
  "id": "ID",
  "name": "NAME",
  "stageName": "STAGE_NAME",
}
`;
